CHANGE Style update

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,7 +6,7 @@ const day = date.getDate();
 const is_logged = Astro.cookies.get("logged_user");
 ---
 
-<header class="mb-5 bg-slate-600 p-3 text-slate-200">
+<header class="mb-5 bg-slate-600 p-3 text-slate-200 bg-opacity-80 backdrop-blur-md">
     <nav class="flex justify-between align-middle">
         <a href="/" class="navbar-brand font-semibold flex">
             <img
