--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,3 +26,13 @@ const { title = "Eurovision homestudio" } = Astro.props;
 		</div>
 	</body>
 </html>
+
+<style>
+	body {
+		background-image: url("/concert-1280.webp");
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center;
+		background-attachment: fixed;
+	}
+</style>
