--- a/src/pages/participant_list.astro
+++ b/src/pages/participant_list.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import ParticipantListItem from "../components/ParticipantListItem.astro";
 
 import { db, like, Participants } from 'astro:db'
 
@@ -10,22 +11,7 @@ const participants = await db.select().from(Participants).orderBy(Participants.t
 <Layout title="Eurovision 24 homestudio">
     {
         participants.map((participant) => (
-            <a href={"/participant/" + participant.id}>
-                <section class="flex flex-1 mb-5 border rounded-xl p-4 shadow gap-5 items-center">
-                    <div class="text-3xl w-16 text-center">
-                        {participant.turn}
-                    </div>
-                    <div>
-                        <ul>
-                            <li>{participant.country}</li>
-                            <li>
-                                {participant.name} - {participant.song}
-                            </li>
-                        </ul>
-                    </div>
-                    <div />
-                </section>
-            </a>
+            <ParticipantListItem country={participant.country} name={participant.name} song={participant.song} turn={participant.turn} id={participant.id}/>
         ))
     }
 </Layout>
