CHANGE Login screen style update was missing

--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -27,8 +27,8 @@ if (Astro.request.method === "POST") {
 ---
 
 <Layout title="Login">
-    <div class="flex justify-center items-center h-screen bg-indigo-600">
-        <div class="w-96 p-6 shadow-lg bg-white rounded-md">
+    <div class="flex justify-center items-center h-screen">
+        <div class="w-96 p-6 shadow-lg bg-slate-100 rounded-md bg-opacity-50 backdrop-blur-lg">
             <h1 class="text-3xl block text-center font-semibold">
                 Kirjaudu sisään
             </h1>
