--- a/src/layouts/LoginLayout.astro
+++ b/src/layouts/LoginLayout.astro
@@ -24,3 +24,13 @@ const { title = "Eurovision homestudio" } = Astro.props;
 		<slot />
 	</body>
 </html>
+
+<style>
+	body {
+		background-image: url("/concert-1280.webp");
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center;
+		background-attachment: fixed;
+	}
+</style>
